--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -368,12 +368,13 @@ input.ajust-input, textarea.ajust-input {
 		text-align: center;
 		
 	   	 .title{
+		word-wrap:break-word;
 		 width: 260px;
-		 margin:-70px 0px 3px 47px;
+		 margin:-80px 0px 3px 47px;
 	   	 text-align: center;
 	   	 font-family:"gotham";
 	   	 font-size:18px;
-		background-color: black;
+
 	
 			.title2{
 				color:black;
