--- a/app/assets/stylesheets/arguments.css.scss
+++ b/app/assets/stylesheets/arguments.css.scss
@@ -419,6 +419,10 @@
 		overflow : hidden;
 		margin-top: 13px;
 		
+		.date{
+		font-family: "gotham-Bold";
+		}
+		
 		.title{
 		padding-right:5	px;
 		font-family: "georgia";
@@ -694,6 +698,10 @@
 		min-height:50px;
 		overflow : hidden;
 		margin-top: 13px;
+		
+		.date{
+		font-family: "gotham-Bold";
+		}
 		
 		.title{
 		padding-right:5	px;
@@ -979,6 +987,10 @@
 		overflow : hidden;
 		margin-top: 13px;
 		
+		.date{
+		font-family: "gotham-Bold";
+		}
+		
 		.title{
 		padding-right:5	px;
 		font-family: "georgia";
@@ -1260,6 +1272,10 @@
 		overflow : hidden;
 		margin-top: 13px;
 		
+		.date{
+		font-family: "gotham-Bold";
+		}
+		
 		.title{
 		padding-right:5	px;
 		font-family: "georgia";
@@ -1269,6 +1285,7 @@
 		letter-spacing:-1px;
 		line-height: 20px;
 		}
+		
 		
 		.cont{
 			word-wrap:break-word;
@@ -1523,6 +1540,10 @@
 		min-height:50px;
 		overflow : hidden;
 		margin-top: 13px;
+		
+		.date{
+		font-family: "gotham-Bold";
+		}
 		
 		.title{
 		padding-right:5	px;
