--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -28,6 +28,7 @@
 	margin-top:-40px;
 	font-family:"georgia";
 	font-size: 14px;
+		word-wrap:break-word;	
 	
 	::-webkit-input-placeholder {
 	   font-family: "gotham";
