--- a/app/views/challenges/_four_corner.html.erb
+++ b/app/views/challenges/_four_corner.html.erb
@@ -379,7 +379,33 @@
 	   		<%end%>
 	   		</div>
 	   	</div>
-		
+
+
+		<div class="span1" id="hover-categorie">
+			<div class="follow">
+	   			<div class="texte">
+	   				<% if @challenge.cat_id == 1 %>
+			   			sport
+			   		<%elsif @challenge.cat_id == 2 %>
+			   			actualité
+			   		<%elsif @challenge.cat_id == 3 %>
+			   			monde
+			   		<%elsif @challenge.cat_id == 4 %>
+			   			éco
+			   		<%elsif @challenge.cat_id == 5 %>
+			   			culture
+			   		<%elsif @challenge.cat_id == 6 %>
+			   		 	sciences
+			   		<%elsif @challenge.cat_id == 7 %>
+			   			philo
+			   		<%elsif @challenge.cat_id == 8 %>
+			   			société
+			   		<%end%>
+	   			</div>
+	   			<div class="arrow-left"></div>
+	   		</div>
+		</div>
+				
 		<div class="row" id="explications">
 			<%= image_tag("bulle-explication-01.png", class: "bulle1")%>
 			<%= image_tag("bulle-explication1-01.png", class: "bulle2")%>
