--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -38,13 +38,15 @@
 		
 		<% if @challenge.not_full? %>
 			<div class="row">
-			<div class="row" id ="openning-comments">
+			
+			<div class="row" id ="openning-comments3">
 				<div class="comment-texte1">Le débat est encore incomplet.</div>
 			</div>
+			
 			</div>
 			<% if current_user && current_user.in_challenge?(@challenge)%>
 				<div class="row" id="inviterchallenge">
-					Invitez de nouvelles personnes
+					Inviter de nouvelles personnes
 				</div>
 				<div class="row" id="developpement-bis">
 						<% @challenge.challenge_toinvite.shuffle.each do |user|%>
@@ -148,13 +150,13 @@
 			<%end%>
 		<% elsif @challenge.state == "judged" || @challenge.state == "homepage"%>
 		<div class="row">
-		<div class="row" id ="openning-comments">
+		<div class="row" id ="openning-comments3">
 			<div class="comment-texte3">Le débat est clos.</div>
 		</div>
 		</div>
 		<% else %>
 		<div class="row">
-			<div class="row" id ="openning-comments">
+			<div class="row" id ="openning-comments3">
 				<div class="comment-texte3">Le débat est en cours.</div>
 			</div>
 		</div>
