--- a/app/views/static_pages/cgu.html.erb
+++ b/app/views/static_pages/cgu.html.erb
@@ -20,7 +20,7 @@
 				1. Mentions légales et champ d’application
 				</div>
 				<div class="texte">
-					Cupofteach.com et les services qu’il propose inclut sans limitation tous les sites internet, applications mobile et autres services qui lui sont liés et est défini ci-après par Moutoners.
+					moutoners.com et les services qu’il propose inclut sans limitation tous les sites internet, applications mobile et autres services qui lui sont liés et est défini ci-après par Moutoners.
 					</br></br>
 					L’éditeur est joignable par courrier électronique à p_ghorra@hotmail.cpm</br>
 					LE SITE est hébergé par HEROKU, Heroku, Inc.</br>
@@ -60,7 +60,7 @@
 				3. Acceptation des Conditions Générales d’Utilisation.
 				</div>
 				<div class="texte">
-					3.1 Toute personne physique agissant en son nom ou pour le Compte d’une personne morale, accédant au site Cupofteach.com, ci après nommé Moutoners,  est un Utilisateur. En accédant à Moutoners, même sans s’y être identifié, l’Utilisateur accepte sans condition la totalité des présentes Conditions Générales d’Utilisation ci après nommées CGU. L’Utilisateur reconnait du même fait avoir pris pleinement connaissance des présentes CGU.</br>
+					3.1 Toute personne physique agissant en son nom ou pour le Compte d’une personne morale, accédant au site moutoners.com, ci après nommé Moutoners,  est un Utilisateur. En accédant à Moutoners, même sans s’y être identifié, l’Utilisateur accepte sans condition la totalité des présentes Conditions Générales d’Utilisation ci après nommées CGU. L’Utilisateur reconnait du même fait avoir pris pleinement connaissance des présentes CGU.</br>
 				3.2	Moutoners et son éditeur se réservent le droit d’interdire l’accès à tout Utilisateur qui ne respecte pas les présentes CGU, sans justification, sans préavis et à tout moment.</br>
 					3.3. Lorsqu’un Utilisateur souhaite bénéficier des services disponibles sur Moutoners, il doit cocher la case « Je reconnais avoir lu et accepté les conditions générales d'utilisation» figurant sur le formulaire d'inscription.</br>
 
