--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,10 +1,6 @@
 <section id="abonnements">
   <div class="container">
 	
-	<div class="row" id="presentation1">
-		<%= image_tag("presentation-centrale14-01.png")%>
-	</div>
-	
 	<div class="row">
 		<div class="row" id="intro">
 			Soyez doux comme des agneaux.
@@ -50,7 +46,7 @@
 			<div class="text">4</div>
 		</div>
 		<div class="text2">
-			Sans vouloir faire nos vichystes et encourager la délation, signaler les dérives.
+			Sans vouloir encourager la délation, signaler les dérives et les abus.
 		</div>
 	</div>		
 
