--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,7 +20,7 @@
               <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 			  <%= devise_error_messages! %>
 			  <div class="bouton">
-			  	INSCRIS-TOI     GRATUITEMENT
+			  	INSCRIVEZ-VOUS     GRATUITEMENT
 			  </div>
 			  <div> 
 			    <%= f.text_field :name, placeholder: "NOM", class: "fields" %>
@@ -43,7 +43,7 @@
 				<span class="texte"><%= @citations.first %></span>
 				</div>
 
-				<div class="texte2">Débattez<span id="mydiv" class="texte3"> <span class="rotate"> en public., en groupe., entre amis., entre ennemis.,entre équipes.</span></div>
+				<div class="texte2">Débattez<span id="mydiv" class="texte3"> <span class="rotate"> en public., en groupe., entre amis.,entre équipes.</span></div>
 				
 		  </div>
 
