--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -242,6 +242,15 @@
 			}
 		}
 		
+	
+		.suissse{
+		margin-left:177px;
+		margin-top: -3px;
+		font-family: "gotham";
+		font-size: 10px;
+		}
+
+		
 		.suisse-suisse{
 			margin-top: -5px;
 			margin-left:8px;
@@ -334,7 +343,35 @@
 		}
 		}
 	}
+
+	#hover-categorie{
+	margin-top:-129px;
+	margin-left:947px;
+	height:  25px;
+	width: 90px;
+	background-color: #808080;
+	position: relative;
+	z-index: 10;
 	
+	.texte{
+		font-family: "gotham-Bold";
+		font-size: 16px;
+		color: #FFF;
+		padding-left: 8px;
+		padding-top:4px;
+	}	
+	.arrow-left{
+		margin-top:-20px;
+		padding-left: 78px;
+	 	width: 0; 
+	 	height: 0; 
+	 	border-top: 12px solid transparent;
+	 	border-bottom: 12px solid transparent; 
+	 	border-right:12px solid white;
+	}
+	
+	}
+		
 	
 	#follow{
 	margin-top:-219px;
@@ -342,6 +379,8 @@
 	height:  25px;
 	width: 90px;
 	background-color: #808080;
+	position: relative;
+	z-index: 10;
 	
 	.texte{
 		font-family: "gotham-Bold";
@@ -386,6 +425,8 @@
 	height:65px;
 	width:90px;
 	background-color:#AAD0FF;
+	position: relative;
+	z-index: 10;
 	
 	 .arrow-left{
 		padding-left:58px;
@@ -475,6 +516,7 @@
 	.ok{
 	position: relative;
 	z-index:0;
+	margin-left:-80px;
 	.okk{
 	margin-top: -30px;
 	opacity:0;
@@ -482,6 +524,20 @@
 	.social-share-button{
 	margin-left:-20px;
 	}
+	}
+	
+	}
+	
+	
+	.okkk{
+	position: relative;
+	z-index:0;
+	margin-top: -31px;
+	margin-left: 100px;
+	.okkkk{
+	margin-top: -20px;
+	margin-left:20px;
+	opacity:0;
 	}
 	
 	}
@@ -1287,6 +1343,13 @@ border-image: url(border2.png) 13 fill repeat;
 		.oui{
 		color: black;
 		}
+	}
+	
+	.suissse{
+	margin-left:182px;
+	margin-top: -3px;
+	font-family: "gotham";
+	font-size: 10px;
 	}
 	
 	.suisse-suisse{
