--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -128,11 +128,13 @@
 		border-radius: 0px;
 		padding-top: 10px;
 		margin-bottom: 50px;
+		img{width: 427px;}
 
 		.image{
 		margin-left:0px;
 		margin-top:0px;
 		position: relative;
+		height: 133px;
 		}
 		.image2{
 		margin-left:0px;
@@ -160,7 +162,7 @@
 			font-size: 14px;
 			font-style: italic;
 			color: black;
-			margin-top: 10px;
+			margin-top: 10px;			
 		}
 		}
 	}
@@ -230,7 +232,7 @@
 	margin-left:0px;
 	margin-top:15px;
 	margin-bottom: 10px;
-	text-align: center;
+	
 	
 	.text1{
 	font-family: "georgia";
@@ -239,6 +241,7 @@
 	font-weight: bold;
 	font-style: italic;
 	margin-bottom:20px;
+	margin-left:45px;
 	}
 	
 	.text2{
@@ -247,6 +250,7 @@
 	margin-left: 210px;
 	padding-top: 5px;
 	padding-bottom: 5px;
+	text-align: center;
 
 	}
 	
@@ -268,7 +272,7 @@
 }
 
 #show-group{
-
+	
 	#profile-header2{
 	margin-top: 17px;
 	margin-bottom: 40px;
@@ -320,10 +324,9 @@
 	margin: 20px 0px 0px 204px;
 	img{width: 653px;}
 	}
-	.image{
-	
-	}
-	.image9{
+
+	.image1{
+
 	img{width: 653px; height: 321px;}
 	}
 	.image2{
@@ -351,7 +354,6 @@
 	
 		#badge1{
 		margin: 10px 10px 0px 10px;
-		cursor: pointer;
 			
 			.texte{
 			background-color: black;
@@ -475,7 +477,6 @@
 			
 			
 		}
-
 		}
 		
 		#voir-tous{
@@ -509,8 +510,7 @@
 		background-color: black;
 			.link{
 			color: white;
-			}
-		
+			}		
 	}
 	
 	#revenir-augroupe2{
@@ -554,6 +554,25 @@
 	}
 	
 	#developpement{
+	
+		#lancerundebat{
+		width: 455px;
+		background-color: #AAD0FF;
+		margin-left: 0px;
+		padding-top: 5px;
+		padding-left: 15px;
+		padding-bottom: 5px;
+		margin-bottom: 15px;
+		text-align: left;
+		font-family: "gotham-Bold";
+		font-size: 18px;
+		cursor: pointer;
+		}
+		
+		#lancerundebat:hover{
+		text-decoration: underline;
+		}
+		
 		#new-micropost{
 			background-color: #EEE;
 			margin-left:0px;
