--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -1,6 +1,5 @@
 <section id="ld">
 	<div class="container">
-		
 		<div id="share">
 			<span>Partagez le débat sur</br></span>
 				<div class="ok">
@@ -19,7 +18,10 @@
 		
 		<div class="row" id= "ld-info">
 			
-			<div class="span2" id="ld-gauche">			
+			<div class="span2" id="ld-gauche">
+				<div class="row" id="equipe">
+					Pour
+				</div>			
 				<div class="image1">
 					<div class="image2">
 					<% if @challenge.position_taken.include?(1) %>
@@ -140,7 +142,10 @@
 				</div>	
 			</div>
 			
-			<div class="span2" id="ld-droite">			
+			<div class="span2" id="ld-droite">
+				<div class="row" id="equipe">
+					Contre
+				</div>			
 				<div class="image1">
 					<div class="image2">
 					<% if @challenge.position_taken.include?(2) %>
@@ -222,6 +227,31 @@
 	   		<%end%>
 	   		</div>
 	   	</div>
+	
+		<div class="span1" id="hover-categorie">
+			<div class="follow">
+	   			<div class="texte">
+	   				<% if @challenge.cat_id == 1 %>
+			   			sport
+			   		<%elsif @challenge.cat_id == 2 %>
+			   			actualité
+			   		<%elsif @challenge.cat_id == 3 %>
+			   			monde
+			   		<%elsif @challenge.cat_id == 4 %>
+			   			éco
+			   		<%elsif @challenge.cat_id == 5 %>
+			   			culture
+			   		<%elsif @challenge.cat_id == 6 %>
+			   		 	sciences
+			   		<%elsif @challenge.cat_id == 7 %>
+			   			philo
+			   		<%elsif @challenge.cat_id == 8 %>
+			   			société
+			   		<%end%>
+	   			</div>
+	   			<div class="arrow-left"></div>
+	   		</div>
+		</div>
 
 		<div class="row" id="explications">
 			<%= image_tag("bulle-explication-01.png", class: "bulle1")%>
