--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -88,6 +88,7 @@
 							<%else%>
 							<li class="non-non"><%= link_to "NON", new_user_session_path, method: "post", :class => "non" %></li>							
 							<%end%>
+							<div class="suissse">SUISSE</div>
 						</div>
 						
 						<div class="row" id="stats">
@@ -144,6 +145,31 @@
 	   		<%end%>
 	   		</div>
 	   	</div>
+		
+		<div class="span1" id="hover-categorie">
+			<div class="follow">
+	   			<div class="texte">
+	   				<% if @debate.cat_id == 1 %>
+			   			sport
+			   		<%elsif @debate.cat_id == 2 %>
+			   			actualité
+			   		<%elsif @debate.cat_id == 3 %>
+			   			monde
+			   		<%elsif @debate.cat_id == 4 %>
+			   			éco
+			   		<%elsif @debate.cat_id == 5 %>
+			   			culture
+			   		<%elsif @debate.cat_id == 6 %>
+			   		 	sciences
+			   		<%elsif @debate.cat_id == 7 %>
+			   			philo
+			   		<%elsif @debate.cat_id == 8 %>
+			   			société
+			   		<%end%>
+	   			</div>
+	   			<div class="arrow-left"></div>
+	   		</div>
+		</div>
 
 		</div>
 		<div class="row" id="explications">
@@ -157,6 +183,10 @@
 				<div class="ok">
 				<%=image_tag('facebook-blanc.png', :alt => 'Moutoners', class: "image")%>
 				<div class="okk"><%= social_share_button_tag(@debate.title) %></div></div>
+				<div class="okkk">
+				<%=image_tag('twitter-blanc-01.png', :alt => 'Moutoners', class: "image")%>
+				<div class="okkkk"><%= twitter_button :url=> 'https://moutoners.com/debats' %>></div></div>
+
 		</div>
 		
 
