--- a/app/views/shared/_argument_fc2_badge.html.erb
+++ b/app/views/shared/_argument_fc2_badge.html.erb
@@ -1,60 +1,66 @@
 <section id="argument-fc2">
 		<div class="row" id='initial'>
-			<% if current_user && current_user == argument.user %>
-			<% if argument.argumentable.class == Debate %>
-			<div class="modifs">
-				<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
-				<div class="effacer" id="effacer">
-					Effacer
-				</div>
-				<div class="effacersur">
-					<div class='texte3'>
-						Etes vous surs de vouloir effacer?
-					</div>
-					<div class="finalementnon">
-						 Non
-					</div>
-					<div class="texte2">
-						<%= link_to "Effacer", argument_path(argument), :method => :delete, class: "texte2" %>
-					</div>
-				</div>
-			</div>
-			<% elsif argument.modifiable? %>
-			<div class="modifs2">
-				<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
-			</div>
-			<% end %>
-			<% elsif current_user.try(:admin?)%>
+				<% if current_user && current_user == argument.user %>
+				<% if argument.argumentable.class == Debate %>
 				<div class="modifs">
 					<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
-					<div class="texte2" id="effacer">
-						<%= link_to "Effacer", argument_path(argument), :method => :delete, class: "texte2" %>
+					<div class="effacer" id="effacer">
+						Effacer
+					</div>
+					<div class="effacersur">
+						<div class='texte3'>
+							Etes vous sûr(e) de vouloir effacer?
+						</div>
+						<div class="finalementnon">
+							 Non
+						</div>
+						<div class="texte2">
+							<%= link_to "Effacer", argument_path(argument), :method => :delete, class: "texte2" %>
+						</div>
 					</div>
 				</div>
-			<% else %>
-				<div class='modifs'>
-					<div class="flags">
-						<%= image_tag("flag-01.png", class: "image")%>
-					</div>
-				<% if current_user %>
-					<div class="finalementnon2">
-						 Non
-					</div>
-					<div class="signalisation">
-						<%= form_for (Flag.new) do |f| %>
-						  <%= render 'shared/error_messages', object: f.object %>
-
-						    <%= f.hidden_field :user_id, :value => current_user.id %>
-							<%= f.hidden_field :argument_id, :value => argument.id %>
-						  	<%= f.submit "Signaler", class: "texte2" %>
-						<% end %>
-					</div>
+				<% elsif argument.modifiable? %>
+				<div class="modifs2">
+					<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
+				</div>
 				<% end %>
-			    </div>
-			<% end%>
+				<% elsif current_user.try(:admin?)%>
+					<div class="modifs">
+						<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
+						<div class="texte2" id="effacer">
+							<%= link_to "Effacer", argument_path(argument), :method => :delete, class: "texte2" %>
+						</div>
+					</div>
+				<% else %>
+					<div class='modifs'>
+						<div class="flags">
+							<%= image_tag("flag-01.png", class: "image")%>
+						</div>
+					<% if current_user %>
+						<div class="finalementnon2">
+							 Annuler
+						</div>
+						<div class="signalisation">
+							<%= form_for (Flag.new) do |f| %>
+							  <%= render 'shared/error_messages', object: f.object %>
+
+							    <%= f.hidden_field :user_id, :value => current_user.id %>
+								<%= f.hidden_field :argument_id, :value => argument.id %>
+							  	<%= f.submit "Signaler", class: "texte2" %>
+							<% end %>
+						</div>
+					<% else%>
+						<div class="finalementnon2">
+							<%= link_to('Non')%>
+						</div>
+						<div class="signalisation">
+							<%= link_to('Signaler', new_session_path(resource_name))%>
+						</div>
+					<% end %>
+				    </div>
+				<% end%>
 			
-			
-		     <div class id="rouge">
+				<div class id="rouge">
 		        <div class="row" id="descente">
 	                 <div class="span2">
 	                 	<div class="user">
@@ -69,6 +75,8 @@
 	                 		<div class="title">
 	                 			<%= argument.title%>
 							</div>
+							<span class="date"><%= argument.created_at.strftime("%H:%M")%></span> -
+							<span class="date"><%= argument.created_at.strftime("%d %b. %Y")%></span>
 							<div class="cont"><%=argument.content.split(' ').slice(0,36).join(' ')%> ...
 	                 		</div>
 						</div>
@@ -86,21 +94,29 @@
 							  <% else%>
 							  <%=link_to image_tag("dislike-argument.png"), like_argument_path(argument, type: "down"), method: "post" %>
 							  <% end %>
-
-
-
-							  <%= image_tag("box-texte.png", class: "box")%>
-							  <%= image_tag("vote-non.png", class: "oui")%>	
-									
+						
 							  <div class='toggleOpen'>Lire la suite...</div>								
 	                 		</div>
 						</div>
 						
 						<div class="row" id="coco">
 	                 		<div class="toggle">
+							<% if argument.avatar.url == "default_argument-01.png" %>
 							  <div id="argcontent">
-								<%= h Rinku.auto_link(argument.content).gsub(/\n/, '<br/>').html_safe %>
-							  </div>							
+								<%=h Rinku.auto_link(argument.content).gsub(/\n/, '<br/>').html_safe %>
+							  </div>
+							<% else %>
+							  <div id="argcontent">
+									<div class="image">
+										<%= image_tag(argument.avatar.url, class: "image") %>
+										<div class="texte"><%= argument.legende_graphe%></div>
+									</div>
+
+									</br>
+									<%=h Rinku.auto_link(argument.content).gsub(/\n/, '<br/>').html_safe %>
+							  </div>
+							    
+							<% end %>							
 	                 		</div>
 						</div>
 						
@@ -112,10 +128,10 @@
 					<div class="arrow-up-argument"></div>
 				</div>
 	         </div>
-
 	    </div>
+	
      <div class="argcoms">        
-        <div class="row" id="argcom-contre">
+        <div class="row" id="argcom-pour">
 	        <div class="span8">
 		    		<% argument.argcoms.each do |argcom| %>
     	    		 <%= render "shared/argcom_badge", :argcom => argcom %>
@@ -125,6 +141,5 @@
 			    	<%end%>
 		    </div>
 		</div>
-
 	</div>
 </section>
