--- a/app/views/shared/_home_badge2.html.erb
+++ b/app/views/shared/_home_badge2.html.erb
@@ -54,6 +54,7 @@
 							<% else%>
 							<li class="non-non"><%= link_to "NON", new_user_session_path, :class => "non" %></li>														
 							<%end%>
+														<div class="suissse">SUISSE</div>
 						</div>
 						
 					</div>
