--- a/app/views/users/active.html.erb
+++ b/app/views/users/active.html.erb
@@ -21,6 +21,7 @@
 					<% end %>
 				<% end %>
 		      <% end %>
+						<%= will_paginate @object, previous_label: h("<"), next_label: h(">") %>	
 		      
 			</div>
 		</div>
