--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,12 @@
 <%= will_paginate %>
 
 <ul class="users">
-  <%= render @users %>
+		<% @users.each do |l|%>
+		<div>
+			<%= l.email%>
+			<%= l.name %>
+		</div>
+		<% end%>
 </ul>
 
 <%= will_paginate %>
